# tobi_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml
assets/xacro/: human_assets.xml.xacro  human_avatar.xml.xacro
config/: depth.yaml  rgb.yaml  tiago.rviz  tiago_control.perspective
launch/: biron_2k_controller.launch  biron_2k_movegroup.launch  biron_2k_upload.launch  biron_stage.launch  furnished_clf.launch  gzclient.launch  gzserver.launch  meka_controller.launch  meka_floka_upload.launch  meka_upload.launch  morse.launch  spawn.launch  tiago_gazebo_clf.launch
scenes/: cologne2026.xml.xacro  mockup_2026.xml.xacro  robocup_2026_lab.xml.xacro  tiago_basic.xml.xacro  tiago_basic_distanced.xml.xacro  tiago_basic_objects.xml.xacro  tiago_basic_person.xml.xacro  tiago_challenge_ws25.xml.xacro  tiago_kassel_arena.xml.xacro  tiago_kassel_arena_objects.xml.xacro  tiago_kassel_arena_receptionist.xml.xacro  tiago_office_kitchen.xml.xacro
scripts/: README.md  generate_scene.py  generate_walls.py  mujoco_person_tracker  regal-o-mat.py  shelf_config.yaml.example  simple_geometry_to_xacro.py
worlds/: apartment.world  appartment.world  arena_bordeaux_open.world  bordeaux_opl.world  bremen.world  centralLab.world  centralLab_actor.world  centralLab_actor_exercise.world  clf-robocup-extended.world  clf.world  clf_challenge.world  clf_comfy.world  clf_robocup_extended.world  cluttered.world  dark_apartment.world  furnished_clf.world  furnished_clf2.world  furnished_clf_actor.world  object_rec.world  sim.world  test.world  tobi.world  unknown.world  workshop.world
(+319 files in other folders)
